--- a/web/src/styles/pages/orphanages-map.css
+++ b/web/src/styles/pages/orphanages-map.css
@@ -39,10 +39,16 @@
     font-weight: 800;
 }
 
+#page-map .leaflet-container {
+    z-index: 1;
+}
+
 #page-map .create-orphanage {
     position: absolute;
     right: 40px;
     bottom: 40px;
+
+    z-index: 10;
 
     width: 64px;
     height: 64px;
@@ -57,5 +63,5 @@
 }
 
 #page-map .create-orphanage:hover {
-    background: #17c6eb
+    background: #17c6eb;
 }
