--- a/web/src/styles/pages/orphanages-map.css
+++ b/web/src/styles/pages/orphanages-map.css
@@ -65,3 +65,36 @@
 #page-map .create-orphanage:hover {
     background: #17c6eb;
 }
+
+@media (max-width:700px) {
+    #page-map {
+        flex-direction: column;
+    }
+
+    #page-map aside {
+        width: 100vw;
+        padding: 15px 15px;
+        margin: 0;
+    }
+
+    #page-map aside h2 {
+        font-size: 32px;
+        margin-top: 0;
+        line-height: 26px;
+    }
+
+    #page-map aside p {
+        margin-top: 10px;
+        line-height: 20px;
+    }
+
+    #page-map aside footer {
+        margin-top: 15px;
+    }
+
+    #page-map aside img {
+        width: 32px;
+        height: 32px;
+        margin-bottom: 8px;
+    }
+}
