added dark mode to frontend web

--- a/web/src/styles/pages/create-orphanage.css
+++ b/web/src/styles/pages/create-orphanage.css
@@ -6,6 +6,10 @@
   flex: 1;
 }
 
+#page-create-orphanage.dark main {
+  background: #111;
+}
+
 form.create-orphanage-form {
   width: 700px;
   margin: 64px auto;
@@ -17,6 +21,15 @@ form.create-orphanage-form {
   padding: 64px 80px;
 
   overflow: hidden;
+}
+
+#page-create-orphanage.dark form.create-orphanage-form {
+  background: linear-gradient(329.54deg, #000000 0%, #130F40 100%);
+  border: none;
+}
+
+#page-create-orphanage .leaflet-container {
+  border-radius: 20px;
 }
 
 form.create-orphanage-form {
@@ -35,17 +48,19 @@ form.create-orphanage-form fieldset + fieldset {
 
 form.create-orphanage-form fieldset legend {
   width: 100%;
-
+  
   font-size: 32px;
   line-height: 34px;
   color: #5C8599;
   font-weight: 700;
-
+  
   border-bottom: 1px solid #D3E2E5;
   margin-bottom: 40px;
   padding-bottom: 24px;
 }
-
+#page-create-orphanage.dark form.create-orphanage-form fieldset legend {
+  color: #eee;
+}
 form.create-orphanage-form .input-block + .input-block {
   margin-top: 24px;
 }
@@ -56,7 +71,9 @@ form.create-orphanage-form .input-block label {
   margin-bottom: 8px;
   line-height: 24px;
 }
-
+#page-create-orphanage.dark form.create-orphanage-form .input-block label {
+ color: #eee;
+}
 form.create-orphanage-form .input-block label span {
   font-size: 14px;
   color: #8FA7B3;
@@ -73,7 +90,11 @@ form.create-orphanage-form .input-block textarea {
   outline: none;
   color: #5C8599;
 }
-
+#page-create-orphanage.dark form.create-orphanage-form .input-block input,
+#page-create-orphanage.dark form.create-orphanage-form .input-block textarea {
+  background: #ccc;
+  color: #111;
+}
 form.create-orphanage-form .input-block input {
   height: 64px;
   padding: 0 16px;
@@ -103,15 +124,17 @@ form.create-orphanage-form .input-block .images-container img {
 form.create-orphanage-form .input-block .new-image {
   height: 96px;
   background: #F5F8FA;
-  border: 1px dashed #96D2F0;
+  border: 1px dashed #045DE9;
   border-radius: 20px;
   cursor: pointer;
-
+  
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
+#page-create-orphanage.dark form.create-orphanage-form .input-block .new-image {
+  background: #ccc;
+}
 form.create-orphanage-form .input-block input[type="file"] {
   visibility: hidden;
 }
@@ -146,7 +169,7 @@ form.create-orphanage-form .input-block .button-select button:last-child {
 
 form.create-orphanage-form button.confirm-button {
   margin-top: 64px;
-
+  
   width: 100%;
   height: 64px;
   border: 0;
@@ -155,12 +178,15 @@ form.create-orphanage-form button.confirm-button {
   border-radius: 20px;
   color: #FFFFFF;
   font-weight: 800;
-
+  
   display: flex;
   justify-content: center;
   align-items: center;
-
+  
   transition: background-color 0.2s;
+}
+#page-create-orphanage.dark form.create-orphanage-form button.confirm-button {
+  background: #09a959;
 }
 
 form.create-orphanage-form button.confirm-button svg {
@@ -169,4 +195,7 @@ form.create-orphanage-form button.confirm-button svg {
 
 form.create-orphanage-form button.confirm-button:hover {
   background: #36CF82;
+}
+#page-create-orphanage.dark form.create-orphanage-form button.confirm-button:hover {
+  background: #1aba6a;
 }
