--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -1,11 +1,15 @@
 #page-landing {
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
+    background: linear-gradient(329.54deg, #045DE9 0%, #09C6F9 100%);
     
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#page-landing.dark {
+    background: linear-gradient(315deg, #000000 0%, #130F40 74%);
 }
 
 #page-landing .content-wrapper {
@@ -65,7 +69,7 @@
     
     width: 80px;
     height: 80px;
-    background: #ffd666;
+    background: #E89D05;
     border-radius: 30px;
     
     display: flex;
@@ -75,7 +79,7 @@
     transition: background-color .2s;
 }
 .content-wrapper .enter-app:hover {
-    background: #96feff;
+    background: #F9AE16;
 }
 
 @media (max-width: 700px) {
@@ -83,6 +87,10 @@
         transform: translate(50%, 50%);
         right: 50%;
         text-align: center;
+    }
+
+    #page-landing .location button {
+        margin: 0 auto;
     }
 
     #page-landing .logoImg {
