--- a/web/src/styles/components/sidebar.css
+++ b/web/src/styles/components/sidebar.css
@@ -2,7 +2,7 @@ aside.app-sidebar {
   position: fixed;
   height: 100%;
   padding: 32px 24px;
-  background: linear-gradient(329.54deg, #15B6D6 0%, #15D6D6 100%);
+  background: linear-gradient(329.54deg, #045DE9 0%, #09C6F9 100%);
 
   display: flex;
   flex-direction: column;
@@ -10,18 +10,22 @@ aside.app-sidebar {
   align-items: center;
 }
 
+aside.app-sidebar.dark {
+  background: linear-gradient(329.54deg, #000000 0%, #130F40 100%);
+}
+
 aside.app-sidebar img {
   width: 48px;
 }
 
 aside.app-sidebar footer a,
-aside.app-sidebar footer button {
+aside.app-sidebar footer button.goBack {
   width: 48px;
   height: 48px;
 
   border: 0;
 
-  background: #12AFCB;
+  background: #E89D05;
   border-radius: 16px;
 
   cursor: pointer;
@@ -35,5 +39,5 @@ aside.app-sidebar footer button {
 
 aside.app-sidebar footer a:hover,
 aside.app-sidebar footer button:hover {
-  background: #17D6EB;
+  background: #F9AE16;
 }
