--- a/web/src/styles/pages/orphanages-map.css
+++ b/web/src/styles/pages/orphanages-map.css
@@ -8,12 +8,16 @@
 
 #page-map aside {
     width: 440px;
-    background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
+    background: linear-gradient(329.54deg, #045DE9 0%, #09C6F9 100%);
     padding: 80px;
     
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+#page-map.dark aside {
+    background: linear-gradient(329.54deg, #000000 0%, #130F40 100%);
 }
 
 #page-map aside h2 {
@@ -52,7 +56,7 @@
 
     width: 64px;
     height: 64px;
-    background: #15c3d6;
+    background: #E89D05;
     border-radius: 20px;
 
     display: flex;
@@ -63,7 +67,7 @@
 }
 
 #page-map .create-orphanage:hover {
-    background: #17c6eb;
+    background: #F9AE16;
 }
 
 #page-map .map-popup .leaflet-popup-content-wrapper {
