fixed update route

--- a/web/src/styles/pages/orphanage.css
+++ b/web/src/styles/pages/orphanage.css
@@ -161,7 +161,7 @@
   color: #FF669D;
 }
 
-.orphanage-details .orphanage-details-content button.contact-button {
+.orphanage-details .orphanage-details-content a.contact-button {
   margin-top: 64px;
 
   width: 100%;
