made deletion page and api integration - done animations on most of pages with framer motion - fixed some bugs on update page and with updating unnaproved orphanages

--- a/web/src/styles/pages/create-orphanage.css
+++ b/web/src/styles/pages/create-orphanage.css
@@ -8,11 +8,18 @@
 
 #page-create-orphanage.dark main {
   background: #111;
+  display: flex;
+}
+
+main p {
+  margin: 64px auto 16px;
+  width: 700px;
+  color: #5C8599;
 }
 
 form.create-orphanage-form {
   width: 700px;
-  margin: 64px auto;
+  margin: 0 auto;
 
   background: #FFFFFF;
   border: 1px solid #D3E2E5;
