--- a/web/src/styles/pages/orphanages-map.css
+++ b/web/src/styles/pages/orphanages-map.css
@@ -66,6 +66,25 @@
     transition: background .2s;
 }
 
+#page-map .login {
+    position: absolute;
+    right: 40px;
+    top: 40px;
+
+    z-index: 10;
+
+    width: 64px;
+    height: 64px;
+    background: #E89D05;
+    border-radius: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: background .2s;
+}
+
 #page-map .create-orphanage:hover {
     background: #F9AE16;
 }
