--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -44,6 +44,8 @@
     margin-top: 40px;
     font-size: 24px;
     line-height: 34px;
+    color: #fff;
+    max-width: 350px;
 }
 
 .content-wrapper .location {
