--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -58,6 +58,7 @@
     display: flex;
     flex-direction: column;
     text-align: right;
+    align-items: flex-end;
 }
 
 .content-wrapper .location strong{
@@ -81,6 +82,23 @@
     transition: background-color .2s;
 }
 .content-wrapper .enter-app:hover {
+    background: #F9AE16;
+}
+
+.content-wrapper .enter-login {
+    width: 40px;
+    height: 40px;
+    background: #E89D05;
+    border-radius: 15px;
+    margin-top: 7px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: background-color .2s;
+}
+.content-wrapper .enter-login:hover {
     background: #F9AE16;
 }
 
